--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: PSAWR
 Type: Package
-Title: Pushshift.io API Wrapper for Reddit Submission and Comment Search
+Title: Pushshift API Wrapper for Reddit Submission and Comment Search
 Version: 0.1.0
 Authors@R: 
     person(given = "David",
@@ -8,7 +8,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "david@schochastics.net",
            comment = c(ORCID = "0000-0003-2952-4812"))
-Description: Connects to the API of pushshift.io to search for reddit comments and submissions.
+Description: Connects to the API of <https://pushshift.io/> to search for reddit comments and submissions.
 URL: https://github.com/schochastics/PSAWR/
 BugReports: https://github.com/schochastics/PSAWR/issues
 License: MIT + file LICENSE
